src/css/theme.css
/* webkit */

.cards-list::-webkit-scrollbar {
    height: 0.7em;
}
.cards-list::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(209, 209, 209, 0.3);
}
.cards-list::-webkit-scrollbar-thumb {
  background-color: rgb(224, 224, 224);
  outline: 1px solid rgb(214, 214, 214);
  border-radius: 10px;
}

img {  
    -webkit-user-drag: none;  
    user-select: none;
}

input {
    border: 1px solid grey;
    outline: none;
}

/* Colors */

:root {
    --accent-color:#536DFE;

    --primary-light: #e5e6ef;
    --primary-color: #3F51B5;
    --primary-dark: #303F9F;

    --secondary-light: #6573c3;
    --secondary-color: #27a527;
    --secondary-dark: #2c387e;

    --primary-text: #212121;
    --secondary-text: #757575;
    --divider-color:#BDBDBD;

    --primary-light-darker: #ced1e5;
    --primary-bg:rgb(131, 150, 234);
}

html{
    
}

html, body{
    margin: 0;
}

.root{
    height: 100vh;
}

.website{
    display: flex;
    flex-direction: column;
    height: 100%;
    align-content: space-between;
    justify-content: space-between;
    min-width: 375px;
}

/*** Dark Mode ***/



body.dark{
    background-color: #000000;
    color:white;
}

.website.dark {
    background-color: #000000;
    color:white;
}
/* Navbar */
nav.dark {
    background-color: #000000;
    box-shadow: 0px 1px 4px rgba(249, 249, 249, 0.694);
    color:white;
}

div.dark div.navbar .nav-brand:hover{
    color:var(--primary-light) !important;
    border-radius: 6px;
}

div.navbar .bt-nav-link.dark .nav-link{
    color: var(--primary-light)
}
div.dark .bt-nav-link.dark .nav-link-active{
    background-color: var(--primary-dark);
    color: var(--primary-light);
}
div.navbar .bt-nav-link.dark:hover{
    background-color: var(--primary-color);
    border-radius: 3px;
}

div.navbar div.sign-buttons .nav-button.dark{
    color: var(--primary-light);
    /* border-color: var(--primary-light); */
    
}

/* input dark mode */

div.dark .MuiInputBase-root {
    background-color: var(--primary-light);
    padding-left:10px;
}

div.dark label.MuiFormLabel-root{
    color: rgb(0, 0, 0);
    padding-left:10px;
    z-index: 23123;
}
div.dark .MuiInputLabel-shrink{
    color: var(--primary-light) !important;
    padding-left:0px !important;
}

div.hamb-menu.dark{
    background-color: rgb(20, 20, 20);
}

/* Toggler */

body.dark .toggler--slider {
    border-color: white;
    background-color: #F5F5F5;
}

body.dark .toggler--slider {
    justify-content: flex-end;
}

body.dark .toggler--slider--circle {
    background-color: black;
}

div.dark .background{
    background-color: black;
}

div.dark{
    
    color: white;    
}

/* Infinity Cards */
feature.dark {
    background-color: #000000;
    color: white;    
}

.card--profile.dark{
    background-color: #f1f1f1;
} 

/* Home */
div.sidebar.dark{
    background-color: #000000!important;
    color: white;  
}

/* Footer */
footer.dark {
    background-color: #000000;
    color: white;    
}

